# rc-car-firmware

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  constants.h  main.c
main/lib/event/: event.c  event.h
main/lib/fs/: fs.c  fs.h
main/lib/http/: frontend.h  http.c  http.h
main/lib/motor/: motor.c  motor.h
main/lib/wifi/: wifi.c  wifi.h
partition/: test.txt
